Thesis: changed all bibliography links so that urls are not shown.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1255,13 +1255,11 @@ Mention thesis' repository: \repo
     \url{https://www.thefreedictionary.com/algorithm}
 
 \bibitem{SO}
-    \textit{Do ``algorithms'' exist in Functional Programming?}, \\
-    \url{https://stackoverflow.com/questions/25940327/do-algorithms-exist-in-functional-programming}
+    \href{https://stackoverflow.com/questions/25940327/do-algorithms-exist-in-functional-programming}{\textit{Do ``algorithms'' exist in Functional Programming?}}
 
 \bibitem{CLRS}
     Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein, \\
-    \textit{Introduction to Algorithms}, \\
-    \url{http://ressources.unisciel.fr/algoprog/s00aaroot/aa00module1/res/%5BCormen-AL2011%5DIntroduction_To_Algorithms-A3.pdf}
+    \href{http://ressources.unisciel.fr/algoprog/s00aaroot/aa00module1/res/%5BCormen-AL2011%5DIntroduction_To_Algorithms-A3.pdf}{\textit{Introduction to Algorithms}}
 
 \bibitem{TAOCP}
     Donald Knuth, \textit{The Art of Computer Programming}
@@ -1270,8 +1268,7 @@ Mention thesis' repository: \repo
     Thomas S. Kuhn, \textit{The Structure of Scientific Revolutions}
 
 \bibitem{WordsMatter}
-    Robert Harper, \textit{Words Matter}, 2012 \\
-    \url{https://existentialtype.wordpress.com/2012/02/01/words-matter/}
+    Robert Harper, \href{https://existentialtype.wordpress.com/2012/02/01/words-matter/}{\textit{Words Matter}}, 2012
 
 \bibitem{PersistentDataStructures}
     Driscoll JR, Sarnak N, Sleator DD, Tarjan RE \\
@@ -1279,120 +1276,94 @@ Mention thesis' repository: \repo
 
 \bibitem{FunctionalUnionFind}
     Sylvain Conchon, Jean-Christophe Fillâtre, \\
-    \textit{A Persistent Union-Find Data Structure}, 2007 \\
-    \url{https://www.lri.fr/~filliatr/ftp/publis/puf-wml07.pdf}
+    \href{https://www.lri.fr/~filliatr/ftp/publis/puf-wml07.pdf}{\textit{A Persistent Union-Find Data Structure}}, 2007
 
 \bibitem{Pippenger}
-    Nicholas Pippenger, \textit{Pure versus impure Lisp}, 1996 \\
-    \url{https://www.cs.princeton.edu/courses/archive/fall03/cs528/handouts/Pure%20Versus%20Impure%20LISP.pdf}
+    Nicholas Pippenger, \href{https://www.cs.princeton.edu/courses/archive/fall03/cs528/handouts/Pure%20Versus%20Impure%20LISP.pdf}{\textit{Pure versus impure Lisp}}, 1996
 
 \bibitem{STMonad}
     John Launchbury, Simon Peyton Jones, \\
-    \textit{Lazy Functional State Threads}, 1994 \\
-    \url{https://www.microsoft.com/en-us/research/wp-content/uploads/1994/06/lazy-functional-state-threads.pdf}
+    \href{https://www.microsoft.com/en-us/research/wp-content/uploads/1994/06/lazy-functional-state-threads.pdf}{\textit{Lazy Functional State Threads}}, 1994
 
 \bibitem{ProofByContradiction}
-    Andrej Bauer, \textit{Proof of negation and proof by contradiction}, 2010 \\
-    \url{http://math.andrej.com/2010/03/29/proof-of-negation-and-proof-by-contradiction/}
+    Andrej Bauer, \href{http://math.andrej.com/2010/03/29/proof-of-negation-and-proof-by-contradiction/}{\textit{Proof of negation and proof by contradiction}}, 2010
 
 \bibitem{Coq}
     \url{https://coq.inria.fr/}
 
 \bibitem{CurryHoward}
     Morten Heine Sørensen, Paweł Urzyczyn, \\
-    \textit{Lectures on the Curry-Howard Isomorphism}, 2006, \\
-    \url{http://disi.unitn.it/~bernardi/RSISE11/Papers/curry-howard.pdf}
+    \href{http://disi.unitn.it/~bernardi/RSISE11/Papers/curry-howard.pdf}{\textit{Lectures on the Curry-Howard Isomorphism}}, 2006
 
 \bibitem{CoqInCoq}
-    Bruno Barras, Benjamin Werner, \textit{Coq in Coq}, 1997, \\
-    \url{http://www.lix.polytechnique.fr/Labo/Bruno.Barras/publi/coqincoq.pdf}
+    Bruno Barras, Benjamin Werner, \href{http://www.lix.polytechnique.fr/Labo/Bruno.Barras/publi/coqincoq.pdf}{\textit{Coq in Coq}}, 1997
 
 \bibitem{CoqCoqCorrect}
     Matthieu Sozeau, Simon Boulier, Yannick Forster, Nicolas Tabareau, Théo Winterhalter, \\
-    \textit{Coq Coq Correct! Verification of Type Checking and Erasure for Coq, in Coq}, 2020, \\
-    \url{https://www.irif.fr/~sozeau/research/publications/drafts/Coq_Coq_Correct.pdf}
+    \href{https://www.irif.fr/~sozeau/research/publications/drafts/Coq_Coq_Correct.pdf}{\textit{Coq Coq Correct! Verification of Type Checking and Erasure for Coq, in Coq}}, 2020
 
 \bibitem{Turing}
     Alan Turing, \\
-    \textit{On Computable Numbers, with an Application to the Entscheidungsproblem}, 1936 \\
-    \url{https://www.cs.virginia.edu/~robins/Turing_Paper_1936.pdf}
+    \href{https://www.cs.virginia.edu/~robins/Turing_Paper_1936.pdf}{\textit{On Computable Numbers, with an Application to the Entscheidungsproblem}}, 1936
 
 \bibitem{Church}
-    Alonzo Church, \textit{An Unsolvable Problem of Elementary Number Theory}, 1936 \\
-    \url{https://www.ics.uci.edu/~lopes/teaching/inf212W12/readings/church.pdf}
+    Alonzo Church, \href{https://www.ics.uci.edu/~lopes/teaching/inf212W12/readings/church.pdf}{\textit{An Unsolvable Problem of Elementary Number Theory}}, 1936
 
 \bibitem{OtherTuringMachine}
     Guy Blelloch, Robert Harper, \\
-    \textit{$\lambda$-Calculus: The Other Turing Machine}, 2015 \\
-    \url{https://www.cs.cmu.edu/~rwh/papers/lctotm/cs50.pdf}
+    \href{https://www.cs.cmu.edu/~rwh/papers/lctotm/cs50.pdf}{\textit{$\lambda$-Calculus: The Other Turing Machine}}, 2015
 
 \bibitem{ReasonableMachine}
     Ugo Dal Lago, Simone Martini, \\
-    \textit{The Weak Lambda Calculus
-    as a Reasonable Machine}, 2008 \\
-    \url{https://www.di.unito.it/~deligu/CDR60_TCS/Martini.pdf}
+    \href{https://www.di.unito.it/~deligu/CDR60_TCS/Martini.pdf}{\textit{The Weak Lambda Calculus as a Reasonable Machine}}, 2008
 
 \bibitem{ICC1}
     Ugo Dal Lago, \\
-    \textit{A Short Introduction to Implicit Computational Complexity}, 2010 \\
-    \url{http://cs.unibo.it/~dallago/FICQRA/esslli.pdf}
+    \href{http://cs.unibo.it/~dallago/FICQRA/esslli.pdf}{\textit{A Short Introduction to Implicit Computational Complexity}}, 2010
 
 \bibitem{ICC2}
     Ugo Dal Lago,
-    \textit{Machine-Free Complexity},
-    2019 \\
-    \url{https://caleidoscope.sciencesconf.org/data/DalLago_caleidoscopeslides.pdf}
+    \href{https://caleidoscope.sciencesconf.org/data/DalLago_caleidoscopeslides.pdf}{\textit{Machine-Free Complexity}},
+    2019
 
 \bibitem{CostSemanticsBlog}
-    Robert Harper, \textit{Languages and Machines}, 2015 \\
-    \url{https://existentialtype.wordpress.com/2011/03/16/languages-and-machines/}
+    Robert Harper, \href{https://existentialtype.wordpress.com/2011/03/16/languages-and-machines/}{\textit{Languages and Machines}}, 2015
 
 \bibitem{CostSemantics}
     Norman Danner, Daniel R. Licata, Ramyaa Ramyaa \\
-    \textit{Denotational Cost Semantics for
-    Functional Languages with Inductive Types} \\
-    \url{https://dlicata.wescreates.wesleyan.edu/pubs/dlr15inductive/dlr15inductive.pdf}
+    \href{https://dlicata.wescreates.wesleyan.edu/pubs/dlr15inductive/dlr15inductive.pdf}{\textit{Denotational Cost Semantics for Functional Languages with Inductive Types}}
 
 \bibitem{CoC}
     Thierry Coquand, Gérard Huet, \\
-    \textit{The calculus of constructions}, 1984, \\
-    \url{https://www.sciencedirect.com/science/article/pii/0890540188900053}
+    \href{https://www.sciencedirect.com/science/article/pii/0890540188900053}{\textit{The calculus of constructions}}, 1984
 
 \bibitem{CIC}
     Christine Paulin-Mohring, \\
-    \textit{Introduction to the Calculus of Inductive Constructions}, 2015 \\
-    \url{https://hal.inria.fr/hal-01094195/document}
+    \href{https://hal.inria.fr/hal-01094195/document}{\textit{Introduction to the Calculus of Inductive Constructions}}, 2015
 
 \bibitem{pCuIC}
     Amin Timany, Matthieu Sozeau, \\
-    \textit{Consistency of the Predicative Calculus of Cumulative
-    Inductive Constructions (pCuIC)}, 2018 \\
-    \url{https://hal.inria.fr/hal-01615123v2/document}
+    \href{https://hal.inria.fr/hal-01615123v2/document}{\textit{Consistency of the Predicative Calculus of Cumulative Inductive Constructions (pCuIC)}}, 2018
 
 \bibitem{MLTT1}
     Per Martin-L\"{o}f, \\
-    \textit{An intuitionistic theory of types}, 1972 \\
-    \url{https://archive-pml.github.io/martin-lof/pdfs/An-Intuitionistic-Theory-of-Types-1972.pdf}
+    \href{https://archive-pml.github.io/martin-lof/pdfs/An-Intuitionistic-Theory-of-Types-1972.pdf}{\textit{An intuitionistic theory of types}}, 1972
 
 \bibitem{MLTT2}
     Per Martin-L\"{o}f, \\
-    \textit{Intuitionistic Type Theory}, 1984 \\
-    \url{https://archive-pml.github.io/martin-lof/pdfs/Bibliopolis-Book-retypeset-1984.pdf}
+    \href{https://archive-pml.github.io/martin-lof/pdfs/Bibliopolis-Book-retypeset-1984.pdf}{\textit{Intuitionistic Type Theory}}, 1984
     
 \bibitem{SoftwareFoundations}
     Benjamin C. Pierce, Andrew W. Appel et al., \\
-    \textit{Software Foundations}, 2019, \\
-    \url{https://softwarefoundations.cis.upenn.edu/}
+    \href{https://softwarefoundations.cis.upenn.edu/}{\textit{Software Foundations}}, 2019
 
 \bibitem{CoqArt}
     Yves Bertot and Pierre Castéran, \\
-    \textit{Interactive Theorem Proving and Program Development \\ Coq'Art: The Calculus of Inductive Constructions}, 2004, \\
-    \url{https://www.labri.fr/perso/casteran/CoqArt/}
+    \href{https://www.labri.fr/perso/casteran/CoqArt/}{\textit{Interactive Theorem Proving and Program Development \\ Coq'Art: The Calculus of Inductive Constructions}}, 2004
 
 \bibitem{CPDT}
     Adam Chlipala,
-    \textit{Certified Programming with Dependent Types}, \\
-    \url{http://adam.chlipala.net/cpdt/}
+    \href{http://adam.chlipala.net/cpdt/}{\textit{Certified Programming with Dependent Types}}
 
 \bibitem{Okasaki}
     Chris Okasaki,
@@ -1400,34 +1371,28 @@ Mention thesis' repository: \repo
 
 \bibitem{OkasakiPhD}
     Chris Okasaki,
-    \textit{Purely Functional Data Structures} (PhD thesis), 1996 \\
-    \url{https://www.cs.cmu.edu/~rwh/theses/okasaki.pdf}
+    \href{https://www.cs.cmu.edu/~rwh/theses/okasaki.pdf}{\textit{Purely Functional Data Structures} (PhD thesis)}, 1996
 
 \bibitem{Okasaki10YearsLater}
     Chris Okasaki,
-    \textit{Ten Years of Purely Functional Data Structures}, 2008 \\
-    \url{https://okasaki.blogspot.com/2008/02/ten-years-of-purely-functional-data.html}
+    \href{https://okasaki.blogspot.com/2008/02/ten-years-of-purely-functional-data.html}{\textit{Ten Years of Purely Functional Data Structures}}, 2008
 
 \bibitem{SinceOkasaki}
-    \textit{What's new in purely functional data structures since Okasaki?}, \\
-    \url{https://cstheory.stackexchange.com/questions/1539/whats-new-in-purely-functional-data-structures-since-okasaki}
+    \href{https://cstheory.stackexchange.com/questions/1539/whats-new-in-purely-functional-data-structures-since-okasaki}{\textit{What's new in purely functional data structures since Okasaki?}},
 
 \bibitem{VFA}
     Andrew W. Appel,
-    \textit{Verified Functional Algorithms}, 2018 \\
-    \url{https://softwarefoundations.cis.upenn.edu/vfa-current/index.html}
+    \href{https://softwarefoundations.cis.upenn.edu/vfa-current/index.html}{\textit{Verified Functional Algorithms}}, 2018
 
 \bibitem{DefunctionalizationLight}
     James Koppel,
-    \textit{The Best Refactoring You've Never Heard Of},
-    2019, \\
-    \url{http://www.pathsensitive.com/2019/07/the-best-refactoring-youve-never-heard.html}
+    \href{http://www.pathsensitive.com/2019/07/the-best-refactoring-youve-never-heard.html}{\textit{The Best Refactoring You've Never Heard Of}},
+    2019
 
 \bibitem{DefunctionalizationSerious}
     Olivier Danvy and Lasse R. Nielsen,
-    \textit{Defunctionalization at Work},
-    2001, \\
-    \url{https://www.brics.dk/RS/01/23/BRICS-RS-01-23.pdf}
+    \href{https://www.brics.dk/RS/01/23/BRICS-RS-01-23.pdf}{\textit{Defunctionalization at Work}},
+    2001
 
 \bibitem{Polya}
     George Pólya, \textit{How to Solve It}, 1945
@@ -1437,146 +1402,121 @@ Mention thesis' repository: \repo
 
 \bibitem{BBHarper}
     Robert Harper,
-    \textit{Boolean Blindness},
-    2011, \\
-    \url{https://existentialtype.wordpress.com/2011/03/15/boolean-blindness/}
+    \href{https://existentialtype.wordpress.com/2011/03/15/boolean-blindness/}{\textit{Boolean Blindness}},
+    2011
 
 \bibitem{HoTTBook}
     The Univalent Foundations Program, \\
-    \textit{Homotopy Type Theory: Univalent Foundations of Mathematics},
-    2013, \\
-    \url{https://homotopytypetheory.org/book/}
+    \href{https://homotopytypetheory.org/book/}{\textit{Homotopy Type Theory: Univalent Foundations of Mathematics}},
+    2013
 
 \bibitem{BBFairbank}
     Jeremy Fairbank,
-    \textit{Solving the Boolean Identity Crisis},
-    2019, \\
-    \url{https://medium.com/swlh/solving-the-boolean-identity-crisis-33eeccde2c96}
+    \href{https://medium.com/swlh/solving-the-boolean-identity-crisis-33eeccde2c96}{\textit{Solving the Boolean Identity Crisis}},
+    2019
 
 \bibitem{BBHXA}
     Harrison Ainsworth,
-    \textit{‘Boolean-blindness’ is about types},
-    2013, \\
-    \url{http://www.hxa.name/notes/note-hxa7241-20131124T0927Z.html}
+    \href{http://www.hxa.name/notes/note-hxa7241-20131124T0927Z.html}{\textit{‘Boolean-blindness’ is about types}},
+    2013
 
 \bibitem{IntrinsicExtrinsic}
     John C. Reynolds, \\
-    \textit{The Meaning of Types: from Intrinsic to Extrinsic Semantics},
-    2000, \\
-    \url{https://www.cs.cmu.edu/afs/cs/user/jcr/ftp/typemeaning.pdf}
+    \href{https://www.cs.cmu.edu/afs/cs/user/jcr/ftp/typemeaning.pdf}{\textit{The Meaning of Types: from Intrinsic to Extrinsic Semantics}},
+    2000
 
 \bibitem{SSR1}
     Georges Gonthier, Assia Mahboubi, Enrico Tassi \\
-    \textit{A Small Scale Reflection Extension for the Coq system}, 2016, \\
-    \url{https://hal.inria.fr/inria-00258384v17/document}
+    \href{https://hal.inria.fr/inria-00258384v17/document}{\textit{A Small Scale Reflection Extension for the Coq system}}, 2016
 
 \bibitem{SSR2}
     \url{https://coq.inria.fr/refman/proof-engine/ssreflect-proof-language.html}
     
 \bibitem{MCB}
     Assia Mahboubi and Enrico Tassi with contributions by Yves Bertot and Georges Gonthier, \\
-    \textit{Mathematical Components}, 2018, \\
-    \url{https://math-comp.github.io/mcb/}
+    \href{https://math-comp.github.io/mcb/}{\textit{Mathematical Components}}, 2018
 
 \bibitem{4CT1}
     Georges Gonthier,
-    \textit{A computer-checked proof of the Four Colour Theorem}, 2005 \\
-    \url{https://www.cl.cam.ac.uk/~lp15/Pages/4colproof.pdf}
+    \href{https://www.cl.cam.ac.uk/~lp15/Pages/4colproof.pdf}{\textit{A computer-checked proof of the Four Colour Theorem}}, 2005
 
 \bibitem{4CT2}
     Georges Gonthier,
-    \textit{Formal Proof -- The Four-Color Theorem}, 2008, \\
-    \url{http://www.ams.org/notices/200811/tx081101382p.pdf}
+    \href{http://www.ams.org/notices/200811/tx081101382p.pdf}{\textit{Formal Proof -- The Four-Color Theorem}}, 2008
 
 \bibitem{FastAndLoose}
     Nils Anders Danielsson, John Hughes, Patrik Jansson, Jeremy Gibbons, \\
-    \textit{Fast and Loose Reasoning is Morally Correct}, 2006, \\
-    \url{https://www.cs.ox.ac.uk/jeremy.gibbons/publications/fast+loose.pdf}
+    \href{https://www.cs.ox.ac.uk/jeremy.gibbons/publications/fast+loose.pdf}{\textit{Fast and Loose Reasoning is Morally Correct}}, 2006
 
 \bibitem{BCM1}
     Ana Bove,
-    \textit{Simple general recursion in type theory},
-    2001, \\
-    \url{https://dl.acm.org/doi/10.5555/774194.774197}
+    \href{https://dl.acm.org/doi/10.5555/774194.774197}{\textit{Simple general recursion in type theory}},
+    2001
 
 \bibitem{BCM2}
     Ana Bove and Venanzio Capretta, \\
-    \textit{Nested General Recursion and Partiality in Type Theory},
-    2001, \\
-    \url{https://www.researchgate.net/publication/285777618_Nested_General_Recursion_and_Partiality_in_Type_Theory}
+    \href{https://www.researchgate.net/publication/285777618_Nested_General_Recursion_and_Partiality_in_Type_Theory}{\textit{Nested General Recursion and Partiality in Type Theory}},
+    2001
 
 \bibitem{BCM3}
     Ana Bove,
-    \textit{Mutual General Recursion in Type Theory},
-    2002, \\
-    \url{https://core.ac.uk/display/197949303}
+    \href{https://core.ac.uk/display/197949303}{\textit{Mutual General Recursion in Type Theory}},
+    2002
 
 \bibitem{BCM4}
     Ana Bove,
-    \textit{General Recursion in Type Theory},
-    2003, \\
-    \url{https://link.springer.com/chapter/10.1007/3-540-39185-1_3}
+    \href{https://link.springer.com/chapter/10.1007/3-540-39185-1_3}{\textit{General Recursion in Type Theory}},
+    2003
 
 \bibitem{BCM5}
     Ana Bove and Venanzio Capretta, \\
-    \textit{Modelling general recursion in type theory},
-    2004, \\
-    \url{http://www.cs.nott.ac.uk/~pszvc/publications/General_Recursion_MSCS_2005.pdf}
+    \href{http://www.cs.nott.ac.uk/~pszvc/publications/General_Recursion_MSCS_2005.pdf}{\textit{Modelling general recursion in type theory}},
+    2004
 
 \bibitem{BCM6}
     Ana Bove and Venanzio Capretta, \\
-    \textit{Recursive Functions with Higher Order Domains},
-    2005, \\
-    \url{http://www.cs.ru.nl/~venanzio/publications/Higher_Domains_TLCA2005.pdf}
+    \href{http://www.cs.ru.nl/~venanzio/publications/Higher_Domains_TLCA2005.pdf}{\textit{Recursive Functions with Higher Order Domains}},
+    2005
 
 \bibitem{BCM7}
     Ana Bove and Venanzio Capretta, \\
-    \textit{Computation by Prophecy},
-    2007, \\
-    \url{https://www.researchgate.net/publication/220727479_Computation_by_Prophecy}
+    \href{https://www.researchgate.net/publication/220727479_Computation_by_Prophecy}{\textit{Computation by Prophecy}},
+    2007
 
 \bibitem{BCM8}
     Ana Bove and Venanzio Capretta, \\
-    \textit{A Type of Partial Recursive Functions},
-    2008, \\
-    \url{https://www.researchgate.net/publication/221302295_A_Type_of_Partial_Recursive_Functions}
+    \href{https://www.researchgate.net/publication/221302295_A_Type_of_Partial_Recursive_Functions}{\textit{A Type of Partial Recursive Functions}},
+    2008
 
 \bibitem{BCM9}
     Ana Bove,
-    \textit{Another Look at Function Domains},
-    2009, \\
-    \url{https://core.ac.uk/download/pdf/82578788.pdf}
+    \href{https://core.ac.uk/download/pdf/82578788.pdf}{\textit{Another Look at Function Domains}},
+    2009
 
 \bibitem{f91}
     Donald Knuth,
-    \textit{Textbook Examples of Recursion},
-    1991, \\
-    \url{https://arxiv.org/pdf/cs/9301113.pdf}
+    \href{https://arxiv.org/pdf/cs/9301113.pdf}{\textit{Textbook Examples of Recursion}},
+    1991
 
 \bibitem{Knapp}
     Cory Knapp,
-    \textit{Partial Functions and Recursion in Univalent Type
-    Theory},
-    2018, \\
-    \url{https://etheses.bham.ac.uk//id/eprint/8448/4/Knapp18PhD.pdf}
+    \href{https://etheses.bham.ac.uk//id/eprint/8448/4/Knapp18PhD.pdf}{\textit{Partial Functions and Recursion in Univalent Type Theory}},
+    2018
 
 \bibitem{PartialityMonad}
-    Thorsten Altenkirch, Nils Anders Danielsson, and Nicolai Kraus,
-    \textit{Partiality, Revisited \\The Partiality Monad as a Quotient Inductive-Inductive Type},
-    2017, \\
-    \url{https://arxiv.org/pdf/1610.09254.pdf}
+    Thorsten Altenkirch, Nils Anders Danielsson, and Nicolai Kraus, \\
+    \href{https://arxiv.org/pdf/1610.09254.pdf}{\textit{Partiality, Revisited \\The Partiality Monad as a Quotient Inductive-Inductive Type}},
+    2017
 
 \bibitem{FunInd}
     G. Barthe and P. Courtieu, \\
-    \textit{Efficient Reasoning about Executable Specifications in Coq},
-    2002 \\
-    \url{https://www.researchgate.net/publication/221302198_Efficient_Reasoning_about_Executable_Specifications_in_Coq}
+    \href{https://www.researchgate.net/publication/221302198_Efficient_Reasoning_about_Executable_Specifications_in_Coq}{\textit{Efficient Reasoning about Executable Specifications in Coq}},
+    2002
 
 \bibitem{Burstall}
     R. M. Burstall,
-    \textit{Proving properties of programs by structural induction},
-    1968, \\
-    \url{http://www.cse.chalmers.se/edu/year/2010/course/DAT140_Types/Burstall.pdf}
+    \href{http://www.cse.chalmers.se/edu/year/2010/course/DAT140_Types/Burstall.pdf}{\textit{Proving properties of programs by structural induction}},
+    1968
 
 \bibitem{Slind}
     Konrad Slind,
@@ -1585,64 +1525,53 @@ Mention thesis' repository: \repo
 
 \bibitem{FromTheLeft}
     Conor McBride, James McKinna,
-    \textit{The view from the left},
-    2004, \\
-    \url{https://www.researchgate.net/publication/220676549_The_view_from_the_left}
+    \href{https://www.researchgate.net/publication/220676549_The_view_from_the_left}{\textit{The view from the left}},
+    2004
 
 \bibitem{Program}
     Matthieu Sozeau, \\
-    \textit{Un environnement pour la programmation avec types d\'{e}pendants},
-    2008 \\
-    \url{https://www.irif.fr/~sozeau/research/publications/thesis-sozeau.pdf}
+    \href{https://www.irif.fr/~sozeau/research/publications/thesis-sozeau.pdf}{\textit{Un environnement pour la programmation avec types d\'{e}pendants}},
+    2008
 
 \bibitem{Function}
     Gilles Barthe, Julien Forest, David Pichardie, and Vlad Rusu, \\
-    \textit{Defining and Reasoning About Recursive Functions: A Practical Tool for the Coq Proof Assistant},
-    2006 \\
-    \url{https://www.researchgate.net/publication/48415012_Defining_and_Reasoning_About_Recursive_Functions_A_Practical_Tool_for_the_Coq_Proof_Assistant}
+    \href{https://www.researchgate.net/publication/48415012_Defining_and_Reasoning_About_Recursive_Functions_A_Practical_Tool_for_the_Coq_Proof_Assistant}{\textit{Defining and Reasoning About Recursive Functions: A Practical Tool for the Coq Proof Assistant}},
+    2006
 
 \bibitem{FunctionRefman}
     Coq Reference Manual,
-    \textit{Functional induction}, \\
-    \url{https://coq.inria.fr/refman/using/libraries/funind.html}
+    \href{https://coq.inria.fr/refman/using/libraries/funind.html}{\textit{Functional induction}}
 
 \bibitem{Equations}
     Matthieu Sozeau, Cyprien Mangin, \\
-    \textit{Equations Reloaded: High-Level Dependently-Typed Functional Programming and Proving in Coq},
-    2019, \\
-    \url{https://www.irif.fr/~sozeau//research/publications/Equations_Reloaded-ICFP19.pdf}
+    \href{https://www.irif.fr/~sozeau//research/publications/Equations_Reloaded-ICFP19.pdf}{\textit{Equations Reloaded: High-Level Dependently-Typed Functional Programming and Proving in Coq}},
+    2019
 
 \bibitem{EncodeDecodeAbstract}
     James McKinna and Fredrik Nordvall Forsberg, \\
-    \textit{The Encode-Decode Method, Relationally (Abstract)},
-    2015, \\
-    \url{http://cs.ioc.ee/types15/abstracts-book/contrib27.pdf}
+    \href{http://cs.ioc.ee/types15/abstracts-book/contrib27.pdf}{\textit{The Encode-Decode Method, Relationally (Abstract)}},
+    2015
 
 \bibitem{EncodeDecodeSlides}
     James McKinna and Fredrik Nordvall Forsberg, \\
-    \textit{The Encode-Decode Method, Relationally (Slides)},
-    2015, \\
-    \url{https://personal.cis.strath.ac.uk/fredrik.nordvall-forsberg/talks/stp_dundee_2015/stp_dundee_2015-10-07.pdf}
+    \href{https://personal.cis.strath.ac.uk/fredrik.nordvall-forsberg/talks/stp_dundee_2015/stp_dundee_2015-10-07.pdf}{\textit{The Encode-Decode Method, Relationally (Slides)}},
+    2015
 
 \bibitem{SlidingAdmit}
-    F* wiki, \textit{Sliding admit verification style}, \\
-    \url{https://github.com/FStarLang/FStar/wiki/Sliding-admit-verification-style}
+    F* wiki, \href{https://github.com/FStarLang/FStar/wiki/Sliding-admit-verification-style}{\textit{Sliding admit verification style}}
 
 \bibitem{Typeful}
     Luca Cardelli,
-    \textit{Typeful Programming}, 1991 \\
-    \url{http://www.lucacardelli.name/Papers/TypefulProg.pdf}
+    \href{http://www.lucacardelli.name/Papers/TypefulProg.pdf}{\textit{Typeful Programming}}, 1991
 
 \bibitem{TypeDriven}
     Edwin Brady,
-    \textit{Type-Driven Development with Idris},
-    2017 \\
-    \url{https://www.manning.com/books/type-driven-development-with-idris}
+    \href{https://www.manning.com/books/type-driven-development-with-idris}{\textit{Type-Driven Development with Idris}},
+    2017
 
 \bibitem{TypeFirst}
     Tomas Petricek,
-    \textit{Why type-first development matters},
-    \url{http://tomasp.net/blog/type-first-development.aspx/}
+    \href{http://tomasp.net/blog/type-first-development.aspx/}{\textit{Why type-first development matters}}, 2012
 
 \end{thebibliography}
 
