Backed up all links to blog posts/StackOverflow using the WaybackMachine.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1249,26 +1249,35 @@ Mention thesis' repository: \repo
 
 %%%%% BIBLIOGRAFIA
 
+\newcommand{\wayback}[1]{\href{#1}{WaybackMachine copy}}
+
 \begin{thebibliography}{1}
 
 \bibitem{TheFreeDictionary}
-    \url{https://www.thefreedictionary.com/algorithm}
+    \url{https://www.thefreedictionary.com/algorithm}, \\
+    \wayback{https://web.archive.org/web/20210320000535/https://www.thefreedictionary.com/algorithm}
 
 \bibitem{SO}
-    \href{https://stackoverflow.com/questions/25940327/do-algorithms-exist-in-functional-programming}{\textit{Do ``algorithms'' exist in Functional Programming?}}
+    \href{https://stackoverflow.com/questions/25940327/do-algorithms-exist-in-functional-programming}{\textit{Do ``algorithms'' exist in Functional Programming?}}, \\
+    \wayback{https://web.archive.org/web/20210320000834/https://stackoverflow.com/questions/25940327/do-algorithms-exist-in-functional-programming}
+    
 
 \bibitem{CLRS}
     Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein, \\
     \href{http://ressources.unisciel.fr/algoprog/s00aaroot/aa00module1/res/%5BCormen-AL2011%5DIntroduction_To_Algorithms-A3.pdf}{\textit{Introduction to Algorithms}}
 
 \bibitem{TAOCP}
-    Donald Knuth, \textit{The Art of Computer Programming}
+    Donald Knuth,
+    \textit{The Art of Computer Programming}
 
 \bibitem{Kuhn}
-    Thomas S. Kuhn, \textit{The Structure of Scientific Revolutions}
+    Thomas S. Kuhn,
+    \textit{The Structure of Scientific Revolutions}
 
 \bibitem{WordsMatter}
-    Robert Harper, \href{https://existentialtype.wordpress.com/2012/02/01/words-matter/}{\textit{Words Matter}}, 2012
+    Robert Harper,
+    \href{https://existentialtype.wordpress.com/2012/02/01/words-matter/}{\textit{Words Matter}}, 2012, \\
+    \wayback{https://web.archive.org/web/20210320001018/https://existentialtype.wordpress.com/2012/02/01/words-matter/}
 
 \bibitem{PersistentDataStructures}
     Driscoll JR, Sarnak N, Sleator DD, Tarjan RE \\
@@ -1279,14 +1288,17 @@ Mention thesis' repository: \repo
     \href{https://www.lri.fr/~filliatr/ftp/publis/puf-wml07.pdf}{\textit{A Persistent Union-Find Data Structure}}, 2007
 
 \bibitem{Pippenger}
-    Nicholas Pippenger, \href{https://www.cs.princeton.edu/courses/archive/fall03/cs528/handouts/Pure%20Versus%20Impure%20LISP.pdf}{\textit{Pure versus impure Lisp}}, 1996
+    Nicholas Pippenger,
+    \href{https://www.cs.princeton.edu/courses/archive/fall03/cs528/handouts/Pure%20Versus%20Impure%20LISP.pdf}{\textit{Pure versus impure Lisp}}, 1996
 
 \bibitem{STMonad}
     John Launchbury, Simon Peyton Jones, \\
     \href{https://www.microsoft.com/en-us/research/wp-content/uploads/1994/06/lazy-functional-state-threads.pdf}{\textit{Lazy Functional State Threads}}, 1994
 
 \bibitem{ProofByContradiction}
-    Andrej Bauer, \href{http://math.andrej.com/2010/03/29/proof-of-negation-and-proof-by-contradiction/}{\textit{Proof of negation and proof by contradiction}}, 2010
+    Andrej Bauer,
+    \href{http://math.andrej.com/2010/03/29/proof-of-negation-and-proof-by-contradiction/}{\textit{Proof of negation and proof by contradiction}}, 2010, \\
+    \wayback{https://web.archive.org/web/20201109002956/http://math.andrej.com/2010/03/29/proof-of-negation-and-proof-by-contradiction/}
 
 \bibitem{Coq}
     \url{https://coq.inria.fr/}
@@ -1296,7 +1308,8 @@ Mention thesis' repository: \repo
     \href{http://disi.unitn.it/~bernardi/RSISE11/Papers/curry-howard.pdf}{\textit{Lectures on the Curry-Howard Isomorphism}}, 2006
 
 \bibitem{CoqInCoq}
-    Bruno Barras, Benjamin Werner, \href{http://www.lix.polytechnique.fr/Labo/Bruno.Barras/publi/coqincoq.pdf}{\textit{Coq in Coq}}, 1997
+    Bruno Barras, Benjamin Werner,
+    \href{http://www.lix.polytechnique.fr/Labo/Bruno.Barras/publi/coqincoq.pdf}{\textit{Coq in Coq}}, 1997
 
 \bibitem{CoqCoqCorrect}
     Matthieu Sozeau, Simon Boulier, Yannick Forster, Nicolas Tabareau, Théo Winterhalter, \\
@@ -1307,7 +1320,8 @@ Mention thesis' repository: \repo
     \href{https://www.cs.virginia.edu/~robins/Turing_Paper_1936.pdf}{\textit{On Computable Numbers, with an Application to the Entscheidungsproblem}}, 1936
 
 \bibitem{Church}
-    Alonzo Church, \href{https://www.ics.uci.edu/~lopes/teaching/inf212W12/readings/church.pdf}{\textit{An Unsolvable Problem of Elementary Number Theory}}, 1936
+    Alonzo Church,
+    \href{https://www.ics.uci.edu/~lopes/teaching/inf212W12/readings/church.pdf}{\textit{An Unsolvable Problem of Elementary Number Theory}}, 1936
 
 \bibitem{OtherTuringMachine}
     Guy Blelloch, Robert Harper, \\
@@ -1327,7 +1341,9 @@ Mention thesis' repository: \repo
     2019
 
 \bibitem{CostSemanticsBlog}
-    Robert Harper, \href{https://existentialtype.wordpress.com/2011/03/16/languages-and-machines/}{\textit{Languages and Machines}}, 2015
+    Robert Harper,
+    \href{https://existentialtype.wordpress.com/2011/03/16/languages-and-machines/}{\textit{Languages and Machines}}, 2015, \\
+    \wayback{https://web.archive.org/web/20210320001331/https://existentialtype.wordpress.com/2011/03/16/languages-and-machines/}
 
 \bibitem{CostSemantics}
     Norman Danner, Daniel R. Licata, Ramyaa Ramyaa \\
@@ -1367,18 +1383,22 @@ Mention thesis' repository: \repo
 
 \bibitem{Okasaki}
     Chris Okasaki,
-    \textit{Purely Functional Data Structures}, 1998
+    \textit{Purely Functional Data Structures},
+    1998
 
 \bibitem{OkasakiPhD}
     Chris Okasaki,
-    \href{https://www.cs.cmu.edu/~rwh/theses/okasaki.pdf}{\textit{Purely Functional Data Structures} (PhD thesis)}, 1996
+    \href{https://www.cs.cmu.edu/~rwh/theses/okasaki.pdf}{\textit{Purely Functional Data Structures} (PhD thesis)},
+    1996
 
 \bibitem{Okasaki10YearsLater}
     Chris Okasaki,
-    \href{https://okasaki.blogspot.com/2008/02/ten-years-of-purely-functional-data.html}{\textit{Ten Years of Purely Functional Data Structures}}, 2008
+    \href{https://okasaki.blogspot.com/2008/02/ten-years-of-purely-functional-data.html}{\textit{Ten Years of Purely Functional Data Structures}}, 2008, \\
+    \wayback{https://web.archive.org/web/20210320001420/https://okasaki.blogspot.com/2008/02/ten-years-of-purely-functional-data.html}
 
 \bibitem{SinceOkasaki}
-    \href{https://cstheory.stackexchange.com/questions/1539/whats-new-in-purely-functional-data-structures-since-okasaki}{\textit{What's new in purely functional data structures since Okasaki?}},
+    \href{https://cstheory.stackexchange.com/questions/1539/whats-new-in-purely-functional-data-structures-since-okasaki}{\textit{What's new in purely functional data structures since Okasaki?}}, \\
+    \wayback{https://web.archive.org/web/20210320001519/https://cstheory.stackexchange.com/questions/1539/whats-new-in-purely-functional-data-structures-since-okasaki}
 
 \bibitem{VFA}
     Andrew W. Appel,
@@ -1395,15 +1415,20 @@ Mention thesis' repository: \repo
     2001
 
 \bibitem{Polya}
-    George Pólya, \textit{How to Solve It}, 1945
+    George Pólya,
+    \textit{How to Solve It},
+    1945
 
 \bibitem{BBLicata}
-    \url{https://www.cs.cmu.edu/~15150/previous-semesters/2012-spring/resources/lectures/09.pdf}
+    \href{https://www.cs.cmu.edu/~15150/previous-semesters/2012-spring/resources/lectures/09.pdf}{Daniel Licata's lecture notes},
+    2012, \\
+    \wayback{https://web.archive.org/web/20210320001648/https://www.cs.cmu.edu/~15150/previous-semesters/2012-spring/resources/lectures/09.pdf}
 
 \bibitem{BBHarper}
     Robert Harper,
     \href{https://existentialtype.wordpress.com/2011/03/15/boolean-blindness/}{\textit{Boolean Blindness}},
-    2011
+    2011, \\
+    \wayback{https://web.archive.org/web/20210320001653/https://existentialtype.wordpress.com/2011/03/15/boolean-blindness/}
 
 \bibitem{HoTTBook}
     The Univalent Foundations Program, \\
@@ -1413,12 +1438,14 @@ Mention thesis' repository: \repo
 \bibitem{BBFairbank}
     Jeremy Fairbank,
     \href{https://medium.com/swlh/solving-the-boolean-identity-crisis-33eeccde2c96}{\textit{Solving the Boolean Identity Crisis}},
-    2019
+    2019, \\
+    \wayback{https://web.archive.org/web/20191210085726/https://medium.com/swlh/solving-the-boolean-identity-crisis-33eeccde2c96}
 
 \bibitem{BBHXA}
     Harrison Ainsworth,
     \href{http://www.hxa.name/notes/note-hxa7241-20131124T0927Z.html}{\textit{‘Boolean-blindness’ is about types}},
-    2013
+    2013, \\
+    \wayback{https://web.archive.org/web/20210320001920/https://www.hxa.name/notes/note-hxa7241-20131124T0927Z.html}
 
 \bibitem{IntrinsicExtrinsic}
     John C. Reynolds, \\
@@ -1558,7 +1585,9 @@ Mention thesis' repository: \repo
     2015
 
 \bibitem{SlidingAdmit}
-    F* wiki, \href{https://github.com/FStarLang/FStar/wiki/Sliding-admit-verification-style}{\textit{Sliding admit verification style}}
+    F* wiki,
+    \href{https://github.com/FStarLang/FStar/wiki/Sliding-admit-verification-style}{\textit{Sliding admit verification style}}, \\
+    \wayback{https://web.archive.org/web/20210320002215/https://github.com/FStarLang/FStar/wiki/Sliding-admit-verification-style}
 
 \bibitem{Typeful}
     Luca Cardelli,
@@ -1571,7 +1600,8 @@ Mention thesis' repository: \repo
 
 \bibitem{TypeFirst}
     Tomas Petricek,
-    \href{http://tomasp.net/blog/type-first-development.aspx/}{\textit{Why type-first development matters}}, 2012
+    \href{http://tomasp.net/blog/type-first-development.aspx/}{\textit{Why type-first development matters}}, 2012, \\
+    \wayback{https://web.archive.org/web/20210320002228/http://tomasp.net/blog/type-first-development.aspx/}
 
 \end{thebibliography}
 
